<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:background="@drawable/blue_color_background"
    tools:context=".Course">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_inline"
                android:text="Course"
                android:textAlignment="center"
                android:textColor="#C63A6A"
                android:textSize="60sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course1"
                android:textColor="#633F0A"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/course2"
                android:textSize="20sp"
                android:textColor="#471505">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course3"
                android:textColor="#633F0A"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/course4"
                android:textSize="20sp"
                android:textColor="#471505">

            </TextView>

        </LinearLayout>




    </ScrollView>


</LinearLayout>